Mon Jan 19 11:17:51 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (serve_kopt): New function.
	(requests): Add "Kopt" request.
	(kopt): New variable.
	(serve_is_modified): Write kopts from there into entries.
	(serve_modified): Call serve_is_modified so we do the same.
	Declare serve_modified and serve_is_modified.
	* vers_ts.c (Version_TS): Set ->options even for a dummy ("D"
	timestamp) entry.
	* import.c (process_import_file): Check for -k options.
	* client.c (client_process_import_file): Send Kopt request.
	(send_fileproc): Likewise, for "cvs add".
	* sanity.sh: Enable test binwrap3-sub2-add1 for remote.
	Add -I .cvswrappers to binwrap3-2a; adjust binwrap3-2d
	accordingly.  Tests for this fix.

Mon Jan 19 08:48:59 1998  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (errmsg1): Append test 168 output to log file.

Sat Jan 17 08:01:51 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (ann-10, ann-11): Don't make assumptions about the
	number of characters in the username.

Fri Jan 16 15:34:02 1998  Larry Jones  <larry.jones@sdrc.com>

	* diff.c (diff_fileproc): Free label1 and label2 when finished.

	* edit.c (editor_set): Don't free edlist until after we're
	done using it.

	* rcscmds.c (RCS_merge): Free xrev1 and xrev2 when finished.

	* subr.c (make_message_rcslegal): Don't access uninitialized or
	unallocated memory; only strip trailing blank lines.
	* sanity.sh (log-3): Enhance to test this fix.

Fri Jan 16 12:41:03 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add keywordlog to list of tests run by default.

	* rcs.c (RCS_deltas): Don't call cvs_output if length is zero;
	passing zero length to cvs_output does not mean output zero
	bytes.  The 27 Dec 1997 change to no longer '\0'-terminate the
	->text field turned this from a time bomb to a user-visible bug.
	* sanity.sh (ann): New tests, test for this fix and other annotate
	behaviors.

Thu Jan 15 23:52:00 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>
