@@ -1,3 +1,10 @@
+Tue Jan 20 19:37:53 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* client.c (send_dirent_proc): Don't send nonexistent directories
+	unless noexec.
+	* sanity.sh (modules2): New tests modules2-13 through modules2-18
+	test for this fix.
+
 Mon Jan 19 11:17:51 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* server.c (serve_kopt): New function.
